--- a/examples/memLeakTests/test.ipynb
+++ b/examples/memLeakTests/test.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir(\"..\")"
+    "os.chdir(\"../..\")"
    ]
   },
   {
@@ -32,11 +32,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'examples'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mexamples\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmemLeakTests\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m func_x, func_5, func_6, func_8, func_10, func_11\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'examples'"
+     ]
+    }
+   ],
    "source": [
-    "from memLeakTests import func_x, func_5, func_6, func_8, func_10, func_11\n"
+    "from examples.memLeakTests import func_x, func_5, func_6, func_8, func_10, func_11\n"
    ]
   },
   {
